# ArticlesPlatform-FastAPI-PostgreSQL-Test

./: .coveragerc  .default.env  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.yml  articles_platform.yml  default.env  flake8.ini  mypy.ini  postgres.yml  pyproject.toml  pytest.ini  task.md  todo.md
src/domain/: enums.py
src/domain/entities/: article.py  association.py  category.py  comment.py  user.py
src/domain/exceptions/: base.py  user_authentication.py  user_registration.py
src/domain/repositories/: interfaces.py  memory.py  memory_article.py  memory_association.py  memory_categories.py  memory_comments.py  memory_users.py
src/domain/services/: article.py  base.py  password_hasher.py  user_authentication.py  user_registration.py
src/domain/specifications/: interfaces.py  password.py
src/domain/types/: permissions.py  permissions_groups.py  roles.py  roles_permissions.py  statuses.py
src/gateways/postgresql/: database.py
src/gateways/postgresql/alembic/: env.py
src/gateways/postgresql/alembic/versions/: 2025_02_16_0846-a49e7b6f6101_articles_categories_users_.py
src/gateways/postgresql/models/: __init__.py  article.py  articles_categories_association.py  category.py  mixins.py  user.py
src/infra/: database.py
src/infra/alembic/: env.py
src/infra/orm_models/: article.py  articles_categories_association.py  category.py  mixins.py  user.py
src/project/settings/: __init__.py  database.py
tests/: conftest.py
tests/unit/: article_test.py  conftest.py  user_test.py
tests/unit/entities/: article_test.py  association_test.py  category_test.py  comment_test.py  user_test.py
tests/unit/exceptions/: base_test.py  user_authentication_test.py  user_registration_test.py
tests/unit/repository/: memory_articles_test.py  memory_associations_test.py  memory_categories_test.py  memory_comments_test.py  memory_test.py  memory_users_test.py
tests/unit/services/: article_test.py  password_hasher_test.py  user_authentication_test.py  user_registration_test.py
tests/unit/specifications/: password_test.py
tests/unit/types/: permissions_groups_test.py  permissions_test.py  roles_permissions_test.py  roles_test.py  status_test.py
