[tool.poetry]
name = "ArticlesPlatform-FastAPI-PostgreSQL-Test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ArticlesPlatform-FastAPI-PostgreSQL-Test"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standart"], version = "^0.115.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
punq = "^0.7.0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
bcrypt = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "^4.1.0"
